@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.0
+VERSION=1.4.1
 
 DEPENDENCY="zeda=1.5.0;zm=1.3.0"
